--- a/style.css
+++ b/style.css
@@ -37,16 +37,17 @@ body {
 
 .past{
     opacity: .7;
-    margin-bottom: 2%;
-    margin-top: 2%;
+    margin-bottom: 3%;
+    margin-top: 3%;
     
 }
 
   footer {
       text-align: center;
-      margin-top: 5%;
       color: #4d90fe;
       font-weight: bold;
+      font-size: 30pt;
+      -webkit-box-reflect:below 10px -webkit-gradient(linear, right top, right bottom, from(transparent), to(rgba(255, 255, 255, 0.4)));
   }
   
   .calculator {
@@ -56,7 +57,10 @@ body {
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
     background-color: white;
     border-radius: 25px;
-  }
+    -webkit-box-reflect:below 50px -webkit-gradient(linear, right top, right bottom, from(transparent), to(rgba(255, 255, 255, 0.4)));
+
+}
+  
   
   .input {
     border: 1px solid #ddd;
