DARK MODE AND LIGHT MODE

--- a/style.css
+++ b/style.css
@@ -1,227 +1,259 @@
 *{
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-    scroll-behavior:smooth;
-  
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  scroll-behavior:smooth;
+
 
 }
 * ::-webkit-scrollbar {
-     display: none;
-   }
+   display: none;
+ }
 
 body {
-    margin-left: 35%;
-    margin-right: 35%;
-    margin-top: 5%;
-    font-family: 'Source Sans Pro', sans-serif;
-    letter-spacing: 5px;
-    font-size: 1.8rem;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("pexels-tima-miroshnichenko-6694533.jpg");
-    background-position: center;
-    background-size: cover;
-  }
+  margin-left: 35%;
+  margin-right: 35%;
+  margin-top: 5%;
+  font-family: 'Source Sans Pro', sans-serif;
+  letter-spacing: 5px;
+  font-size: 1.8rem;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("pexels-tima-miroshnichenko-6694533.jpg");
+  background-position: center;
+  background-size: cover;
+}
 
-  h1{
-      color: #4d90fe;
-      text-align: center;
-      font-weight: bold;
-  }
-  h3{
-    color: white;
-    font-size: 20pt;
+h1{
+    color: #4d90fe;
     text-align: center;
+    font-weight: bold;
+}
+h3{
+  color: white;
+  font-size: 20pt;
+  text-align: center;
 }
 
 .past{
-    opacity: .7;
-    margin-bottom: 3%;
-    margin-top: 3%;
-    
+  opacity: .7;
+  margin-bottom: 3%;
+  margin-top: 3%;
+  
 }
 
-  footer {
-      text-align: center;
-      color: #4d90fe;
-      font-weight: bold;
-      font-size: 30pt;
-      -webkit-box-reflect:below 10px -webkit-gradient(linear, right top, right bottom, from(transparent), to(rgba(255, 255, 255, 0.4)));
-  }
-  
-  .calculator {
-    border: solid 1px gray;
-    padding: 10px;
-    -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    background-color: white;
-    border-radius: 25px;
-    -webkit-box-reflect:below 50px -webkit-gradient(linear, right top, right bottom, from(transparent), to(rgba(255, 255, 255, 0.4)));
+.modes{
+  text-align: center;
+  margin-bottom: 2%;
+}
+.modes button{
+  border-radius: 20px;
+  font-size: 20pt;
+  padding: 10px;
+  transition: 150ms;
+}
+
+.modes #light{
+  background-color: white;
+  color: black;
+  font-weight: bold;
+}
+.modes #dark{
+  background-color: #151515;
+  color: white;
+  font-weight: bold;
+}
+
+.modes button:hover{
+  transform: scale(1.25);
+  transition: 150ms;
+  margin-right: 2%;
+  margin-left: 2%;
+}
+
+footer {
+    text-align: center;
+    color: #4d90fe;
+    font-weight: bold;
+    font-size: 30pt;
+    -webkit-box-reflect:below 10px -webkit-gradient(linear, right top, right bottom, from(transparent), to(rgba(255, 255, 255, 0.4)));
+}
+
+.calculator {
+  border: solid 1px gray;
+  padding: 10px;
+  -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  border-radius: 25px;
+  -webkit-box-reflect:below 50px -webkit-gradient(linear, right top, right bottom, from(transparent), to(rgba(255, 255, 255, 0.4)));
 
 }
-  
-  
-  .input {
-    border: 1px solid #ddd;
-    border-radius: 25px;
-    height: 60px;
-    padding-right: 15px;
-    padding-top: 10px;
-    text-align: right;
-    margin-right: 6px;
-    font-size: 2.8rem;
-    overflow-x: auto;
-    transition: all .2s ease-in-out;
-  }
-  
-  .input:hover {
-    border: 1px solid #bbb;
-    -webkit-box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-  }
-  
-  .buttons {
-      text-align: center;
-  }
-  
-  .operators {
-      text-align: center;
-  }
-  
-  .operators div {
-    display: inline-block;
-    border: 1px solid #bbb;
-    border-radius: 50px;
-    width: 80px;
-    text-align: center;
-    padding: 10px;
-    margin: 20px 4px 10px 0;
-    cursor: pointer;
-    background-color: #ddd;
-    transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
-  }
-  
-  .operators div:hover {
-    background-color: #ddd;
-    -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    border-color: #aaa;
-  }
-  
-  .operators div:active {
-    font-weight: bold;
-  }
-  
-  .leftPanel {
-    display: inline-block;
-  }
-  
-  .numbers div {
-    display: inline-block;
-    border: 1px solid #ddd;
-    border-radius: 25px;
-    width: 80px;
-    text-align: center;
-    padding: 10px;
-    margin: 10px 4px 10px 0;
-    cursor: pointer;
-    background-color: #f9f9f9;
-    transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
-  }
-  
-  .numbers div:hover {
-    background-color: #f1f1f1;
-    -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    border-color: #bbb;
-  }
-  
-  .numbers div:active {
-    font-weight: bold;
-  }
-  
-  div.equal {
-    display: inline-block;
-    border: 1px solid #3079ED;
-    border-radius: 35px;
-    width: 17%;
-    text-align: center;
-    padding: 127px 10px;
-    margin: 10px 6px 10px 0;
-    vertical-align: top;
-    cursor: pointer;
-    color: #FFF;
-    background-color: #4d90fe;
-    transition: all .2s ease-in-out;
-  }
-  
-  div.equal:hover {
-    background-color: #307CF9;
-    -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    border-color: #1857BB;
-  }
-  
-  div.equal:active {
-    font-weight: bold;
-  }
 
 
-  @media screen and (max-width: 1500px) {
-   body{
-       margin-left: 22%;
-       margin-right: 22%;
-   }
+.input {
+  border: 1px solid #ddd;
+  border-radius: 25px;
+  height: 60px;
+  padding-right: 15px;
+  padding-top: 10px;
+  text-align: right;
+  margin-right: 6px;
+  font-size: 2.8rem;
+  overflow-x: auto;
+  transition: all .2s ease-in-out;
+}
+
+.input:hover {
+  border: 1px solid #bbb;
+  -webkit-box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
+.buttons {
+    text-align: center;
+}
+
+.operators {
+    text-align: center;
+}
+
+.operators div {
+  display: inline-block;
+  border: 1px solid #bbb;
+  border-radius: 50px;
+  width: 80px;
+  text-align: center;
+  padding: 10px;
+  margin: 20px 4px 10px 0;
+  cursor: pointer;
+  background-color: #ddd;
+  transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
+}
+
+.operators div:hover {
+  background-color: #4d90fe;
+  color: white;
+  font-weight: bold;
+  -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  border-color: #aaa;
+}
+
+.operators div:active {
+  font-weight: bold;
+}
+
+.leftPanel {
+  display: inline-block;
+}
+
+.numbers div {
+  display: inline-block;
+  border: 1px solid #ddd;
+  border-radius: 25px;
+  width: 80px;
+  text-align: center;
+  padding: 10px;
+  margin: 10px 4px 10px 0;
+  cursor: pointer;
+  background-color: #f9f9f9;
+  transition: border-color .2s ease-in-out, background-color .2s, box-shadow .2s;
+}
+
+.numbers div:hover {
+  background-color: #4d90fe;
+  color: white;
+  font-weight: bold;
+  -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 4px 1px #4d90fe;
+}
+
+.numbers div:active {
+  font-weight: bold;
+}
+
+div.equal {
+  display: inline-block;
+  border: 1px solid #3079ED;
+  border-radius: 35px;
+  width: 17%;
+  text-align: center;
+  padding: 127px 10px;
+  margin: 10px 6px 10px 0;
+  vertical-align: top;
+  cursor: pointer;
+  color: #FFF;
+  background-color: #4d90fe;
+  transition: all .2s ease-in-out;
+}
+
+div.equal:hover {
+  background-color: #307CF9;
+  -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  border-color: #1857BB;
+}
+
+div.equal:active {
+  font-weight: bold;
+}
+
+
+@media screen and (max-width: 1500px) {
+ body{
+     margin-left: 22%;
+     margin-right: 22%;
+ }
 }
 
 @media screen and (max-width: 900px) {
-    body{
-        margin-left: 10%;
-        margin-right: 10%;
-    }
- }
+  body{
+      margin-left: 10%;
+      margin-right: 10%;
+  }
+}
 
 @media screen and (max-width: 700px) {
-    body{
-        letter-spacing: 0px;
-        margin-left: 5%;
-        margin-right: 5%;
-       
+  body{
+      letter-spacing: 0px;
+      margin-left: 5%;
+      margin-right: 5%;
+     
+  }
+  .calculator{
+      width: 90vw;
     }
-    .calculator{
-        width: 90vw;
-      }
-      .operators{
-          display: flex;
-         flex-direction: row;
-         align-items: center;
-         justify-content: center;
-      }
+    .operators{
+        display: flex;
+       flex-direction: row;
+       align-items: center;
+       justify-content: center;
+    }
 
-      div.equal {
-        display: inline-block;
-        border: 1px solid #3079ED;
-        border-radius: 30px;
-        width: 70%;
-        text-align: center;
-        padding: 0px;
-        margin: 0px;
-        font-size: 75pt;
-        margin-bottom: 5%;
-        background-color: #4d90fe;
-        transition: all .2s ease-in-out;
-      }
-      
-      div.equal:hover {
-        background-color: #307CF9;
-        -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-        box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-        border-color: #1857BB;
-      }
-      .leftPanel{
-        margin-left: -5%;
-        margin-right: -5%;
-        width: 100%;
-      }
+    div.equal {
+      display: inline-block;
+      border: 1px solid #3079ED;
+      border-radius: 30px;
+      width: 70%;
+      text-align: center;
+      padding: 0px;
+      margin: 0px;
+      font-size: 75pt;
+      margin-bottom: 5%;
+      background-color: #4d90fe;
+      transition: all .2s ease-in-out;
+    }
+    
+    div.equal:hover {
+      background-color: #307CF9;
+      -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+      border-color: #1857BB;
+    }
+    .leftPanel{
+      margin-left: -5%;
+      margin-right: -5%;
+      width: 100%;
+    }
 }
