--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
   scroll-behavior:smooth;
-
-
+/**/
 }
 * ::-webkit-scrollbar {
    display: none;
