--- a/style.css
+++ b/style.css
@@ -109,6 +109,11 @@ footer {
   box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
 }
 
+#clear{
+  background-color:#4d90fe;
+  color:white;
+}
+
 .buttons {
     text-align: center;
 }
